Fix dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 /* Needed by wa-page */
-html,
+/* html,
 body {
   min-height: 100%;
   height: 100%;
   padding: 0;
   margin: 0;
-}
+} */
